--- a/Sesion5/Constraints1/Constraints1/Base.lproj/Main.storyboard
+++ b/Sesion5/Constraints1/Constraints1/Base.lproj/Main.storyboard
@@ -453,6 +453,57 @@
             </objects>
             <point key="canvasLocation" x="6998.5507246376819" y="105.80357142857143"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="lZb-U3-frR">
+            <objects>
+                <viewController id="Zh5-3Q-rXC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0j9-Ur-yfu">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5vo-HI-jEi">
+                                <rect key="frame" x="0.0" y="0.0" width="207" height="448"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d0g-Iq-UC6">
+                                <rect key="frame" x="207" y="0.0" width="207" height="448"/>
+                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fkl-a8-Rft">
+                                <rect key="frame" x="0.0" y="448" width="207" height="448"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7iw-op-tkJ">
+                                <rect key="frame" x="207" y="448" width="207" height="448"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="NXJ-pp-nrx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Fkl-a8-Rft" secondAttribute="bottom" id="2LO-4H-wIm"/>
+                            <constraint firstItem="Fkl-a8-Rft" firstAttribute="leading" secondItem="0j9-Ur-yfu" secondAttribute="leading" id="3SN-hd-kXY"/>
+                            <constraint firstItem="7iw-op-tkJ" firstAttribute="leading" secondItem="Fkl-a8-Rft" secondAttribute="trailing" id="AKf-sY-Us6"/>
+                            <constraint firstItem="7iw-op-tkJ" firstAttribute="width" secondItem="Fkl-a8-Rft" secondAttribute="width" id="B1z-9m-Bvr"/>
+                            <constraint firstItem="Fkl-a8-Rft" firstAttribute="top" secondItem="5vo-HI-jEi" secondAttribute="bottom" id="IYQ-0B-YYL"/>
+                            <constraint firstItem="5vo-HI-jEi" firstAttribute="leading" secondItem="0j9-Ur-yfu" secondAttribute="leading" id="K7H-mE-BxL"/>
+                            <constraint firstItem="d0g-Iq-UC6" firstAttribute="leading" secondItem="5vo-HI-jEi" secondAttribute="trailing" id="LQd-Kz-vdY"/>
+                            <constraint firstItem="d0g-Iq-UC6" firstAttribute="top" secondItem="0j9-Ur-yfu" secondAttribute="top" id="Twc-ph-bdY"/>
+                            <constraint firstItem="5vo-HI-jEi" firstAttribute="top" secondItem="0j9-Ur-yfu" secondAttribute="top" id="Yvc-UV-EOQ"/>
+                            <constraint firstAttribute="bottom" secondItem="7iw-op-tkJ" secondAttribute="bottom" id="b7m-09-3Ql"/>
+                            <constraint firstItem="d0g-Iq-UC6" firstAttribute="width" secondItem="5vo-HI-jEi" secondAttribute="width" id="bt3-W6-NVT"/>
+                            <constraint firstAttribute="trailing" secondItem="7iw-op-tkJ" secondAttribute="trailing" id="cwS-lM-6Ct"/>
+                            <constraint firstItem="7iw-op-tkJ" firstAttribute="height" secondItem="d0g-Iq-UC6" secondAttribute="height" id="eZs-uC-c8S"/>
+                            <constraint firstItem="7iw-op-tkJ" firstAttribute="top" secondItem="d0g-Iq-UC6" secondAttribute="bottom" id="fV2-Bp-AD7"/>
+                            <constraint firstItem="Fkl-a8-Rft" firstAttribute="height" secondItem="5vo-HI-jEi" secondAttribute="height" id="kNX-q3-Q0W"/>
+                            <constraint firstAttribute="trailing" secondItem="d0g-Iq-UC6" secondAttribute="trailing" id="s1F-Qq-5Hl"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z8k-l3-6HI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7823.188405797102" y="105.80357142857143"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
@@ -463,6 +514,12 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
